--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -17,7 +17,11 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+
                         <ul class="navbar-nav flex-grow-1s mr-auto">
+                            <li class="nav-item float-right">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Employees">Employees</a>
+                            </li>
                             <li class="nav-item float-right">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">Register</a>
                             </li>
@@ -47,8 +51,8 @@
         </main>
     </div>
 
-    <footer class="border-top text-muted bg-light m-0 p-0" style="height: 5vh">
-        <div class="container-fluid text-center">
+    <footer class="border-top text-muted bg-light p-0" style="height: 5%">
+        <div class="container-fluid text-center ">
             <div class="row">
                 <div class="col-md-3">
                     <span class="h6">BouwJeBlut NV</span> Steenstraat 22 3540 Betonville
